--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1820,16 +1820,6 @@ textarea.form-control {
 }
 
 @media (min-width: 1360px) {
-  .navbar-default .container-fluid,
-  .navbar-default .navbar-collapse.collapse,
-  .navbar-default .navbar-nav {
-    flex-wrap: nowrap;
-  }
-
-  .navbar-default .navbar-collapse.collapse {
-    flex-basis: auto;
-  }
-
   .navbar-default .navbar-brand {
     padding-right: 16px;
     padding-left: 16px;
@@ -1846,7 +1836,7 @@ textarea.form-control {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1720px) {
   .navbar-default .container-fluid {
     flex-wrap: nowrap;
     align-items: stretch;
@@ -1872,7 +1862,7 @@ textarea.form-control {
   }
 }
 
-@media (min-width: 769px) and (max-width: 1199px) {
+@media (min-width: 769px) and (max-width: 1719px) {
   .navbar-default .navbar-collapse.collapse {
     flex-wrap: wrap;
   }
